fix horizontal scrollbar

--- a/src/app/detail/[slug]/page.module.scss
+++ b/src/app/detail/[slug]/page.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   min-height: 100%;
+  overflow: hidden;
 
   display: grid;
   grid-template-areas:
