--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -55,6 +55,7 @@ h6 {
   --intro-font-color: hsl(214deg 17% 51%);
   --button-font-color: hsl(235deg 69% 61%);
   --button-background: hsl(236deg 70% 96%);
+  --hover-background: hsl(235deg 68% 86%);
 
   --violet: hsl(235deg 69% 61%);
   --light-violet: hsl(235deg 82% 77%);
@@ -92,4 +93,5 @@ h6 {
   --intro-font-color: hsl(212deg 23% 69%);
   --button-font-color: hsl(0deg 0% 100%);
   --button-background: hsl(220deg 16% 22%);
+  --hover-background: hsl(216deg 8% 35%);
 }
